# CryModules

./: CMakeLists.txt  ModuleHandler.cpp  ModuleHandler.h  ModuleProperties.h  Plugin.cryproject  Plugin.h
Code/: ModuleHandler.cpp
solutions/win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Code_uber.cpp  Editor.vcxproj  GameLauncher.vcxproj  GameServer.vcxproj  GameServer.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Plugin.sln  Plugin.vcxproj  Plugin.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
solutions/win64/CRYENGINE/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CryEngine_CMake_Win64.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
